# bmp_processor

./: .gitignore  CMakeLists.txt  blur.h  bmp.h  cmd_line_parser.cpp  cmd_line_parser.h  crop.h  edge.h  filter.h  grayscale.h  image_processor.cpp  matrix.h  negative.h  readme.md  sharpening.h
test_script/: test_image_processor.py
